--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ h1.test {
     width: 30%;
     height: 30%;
     transform: translate(50%, -50%);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-weight: 400;
     color: #FFA500;
 }
