--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('//fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 
 * {
