--- a/css/default.css
+++ b/css/default.css
@@ -29,12 +29,11 @@ section.header {
 }
 
 h1.test {
-    display: block;
+    display: inline-block;
     width: 100%;
     height: 100%;
     font-family: 'Supermercado One', cursive;
     font-weight: 400;
     font-size: 2em;
     color: #FFA500;
-    background-color: #00008B;
 }
