--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap');
+
 * {
     list-style-type: none;
+    text-decoration: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
@@ -16,10 +19,212 @@ html {
 body {
     height: 100%;
     width: 100%;
-    background-color: #f2f2f2;
+    background-color: #fbfdff;
     margin: 0;
     padding: 0;
 }
+
+div.bannerE {
+    width: 100%;
+    height: 125px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: url(../images/edgar_images/banner_rainier.svg) no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    object-fit: contain;
+    background-attachment: local;
+    background-clip: border-box;
+    background-origin: border-box;
+}
+
+div.bannerK {
+    width: 100%;
+    height: 125px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: url(../images/kelly_images/banner.svg) no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    object-fit: contain;
+    background-attachment: local;
+    background-clip: border-box;
+    background-origin: border-box;
+}
+
+div.bannerP {
+    width: 100%;
+    height: 125px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: url(../images/pablo_images/forestry_service.svg) no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    object-fit: contain;
+    background-attachment: local;
+    background-clip: border-box;
+    background-origin: border-box;
+}
+
+div.bannerL {
+    width: 100%;
+    height: 125px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: url(../images/luiz_images/yellowstone_banner.svg) no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    object-fit: contain;
+    background-attachment: local;
+    background-clip: border-box;
+    background-origin: border-box;
+}
+
+div.bannerLeo {
+    width: 100%;
+    height: 125px;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: url(../images/leo_images/cascades_banner.svg) no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    object-fit: contain;
+    background-attachment: local;
+    background-clip: border-box;
+    background-origin: border-box;
+}
+
+div.content_container {
+    /*display: flex;
+    flex-flow: row nowrap;*/
+    margin: 5% 2%;
+    height: fit-content;
+    width: 95%;
+}
+
+h3.chapter,
+div.source h3 {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+section {
+    display: flex;
+    flex-flow: row nowrap;
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+
+section div {
+    width: 60%;
+    margin-left: 3%;
+}
+
+p {
+    font-family: 'Libre Baskerville', serif;
+    font-weight: 400;
+    margin-right: 4%;
+    text-align: justify;
+}
+
+p.full_text {
+    width: 95%;
+    margin-left: 3%;
+    margin-right: 3%;
+    text-align: justify;
+}
+
+section aside {
+    width: 40%;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+aside img {
+    object-fit: cover;
+}
+
+h1.titleE,
+h1.titleL,
+h1.titleLeo,
+h1.titleK,
+h1.titleP,
+h3.chapter,
+hr,
+h3.source {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+}
+
+hr {
+    width: 30%;
+}
+
+h3.chapter {
+    /*transform: translate(41%, 0%)*/
+    margin-left: 40%;
+}
+
+h3#margin_left_4percent {
+    margin-left: 44%;
+}
+
+h3#margin_left_6percent {
+    margin-left: 46%;
+}
+
+h3#margin_left_2percent {
+    margin-left: 42%;
+}
+
+h3#margin_left_5percent {
+    margin-left: 45%;
+}
+
+h3#margin_left_7percent {
+    margin-left: 47%;
+}
+
+h3.authorE,
+h3.authorL,
+h3.authorLeo,
+h3.authorK,
+h3.authorP {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    /*margin-left: 30%;*/
+}
+
+div.page_id,
+h3.source {
+    margin-left: 5%;
+}
+
+h3.source a:link,
+h3.source a:visited {
+    color: #0dcaf0;
+}
+
+
+/*margin-left: 35%;
+    margin-right: 35%;
+    margin-bottom: 5%;
+}*/
 
 section.header {
     display: block;
@@ -28,12 +233,25 @@ section.header {
     /*transform: translate(-50%, -50%);*/
 }
 
+main.wrapper {
+    min-height: 98%;
+    height: auto;
+    width: 100%;
+    margin: auto;
+    padding: 0;
+    overflow: hidden;
+    background-color: #fbfdff;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+
 h1.test {
-    display: inline-block;
+    display: block;
     /*width: 100%;
     height: 100%;*/
     font-family: 'Supermercado One', cursive;
     font-weight: 400;
     font-size: 2em;
     color: #FFA500;
+    /*background-color: #00008B;*/
 }
